--- a/postcss/src/css/home.css
+++ b/postcss/src/css/home.css
@@ -34,7 +34,7 @@ body {
     background: var(--lightColor);
     display: grid;
     height: calc(var(--viewportHeight)*2);
-    grid-template-columns: 350px 1fr;
+    grid-template-columns: 400px 1fr;
     grid-template-rows: 1fr 150px;
     grid-template-areas: "sidebar primary"
                          "sidebar featuring";
@@ -67,6 +67,13 @@ body {
   .logo {
     width: calc(100% - 100px);
     margin: 0 auto;
+    background: blue;
+    height: 40px;
+    /*background-image: image-set(url() densidad, url() densidad);*/
+    background-image: image-set(url('../../src/images/platzi-video.png') 1x, url('../../src/images/platzi-video-2x.png') 2x, url('../../src/images/platzi-video-3x.png') 300dpi);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .logo-image {
     margin: 0;
