--- a/postcss/src/css/home.css
+++ b/postcss/src/css/home.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: 'Lato', sans-serif;
+    /*font-family: 'Lato', sans-serif;*/
+    font-family: 'Lato', system-ui;
     overflow: hidden;
   }
   :root {
