--- a/postcss/src/css/home.css
+++ b/postcss/src/css/home.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     /*font-family: 'Lato', sans-serif;*/
     font-family: 'Lato', system-ui;
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
   :root {
     --darkColor: #15192a;
@@ -29,7 +29,30 @@ body {
   .btn.warning {
     background: var(--warningColor);
   }
-  
+
+  @custom-selector :--checkeable .checkbox-label, .radio-label;
+  @custom-selector :--hightlight :hover, :active;
+
+  .checkbox:checked + .primaryPlaylist-list{
+    display: none;
+  }
+
+  :--checkeable{
+    cursor: pointer;
+    user-select: none;
+    padding: 3px 7px;
+    border: 1px solid color-mod(red b(10%));
+    border-bottom: 3px solid red;
+    /*color: gray(255);*/
+    font-size: 12px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+  :--checkeable:--hightlight{
+    background: red;
+    color: white;
+  }
   /*home layout*/
   .home {
     background: var(--lightColor);
