--- a/postcss/src/css/home.css
+++ b/postcss/src/css/home.css
@@ -1,12 +1,15 @@
-body {
-    margin: 0;
-    /*font-family: 'Lato', sans-serif;*/
-    font-family: 'Lato', system-ui;
-    /*overflow: hidden;*/
-    @media (--small){
-      border: 10px solid blue;
-    }
-  }
+@import './body.css';
+@import './featuring.css';
+@import './home-layout';
+@import './sidebar.css';
+@import './logo.css';
+@import './my-playlist.css';
+@import './playlist-friends.css';
+@import './primary.css';
+@import './search.css';
+@import './btn.css';
+@import './sidebar-playlist.css';
+
   :root {
     --darkColor: #15192a;
     --lightColor: white;
@@ -25,13 +28,7 @@ body {
     };
   }
 
-  .btn {
-    @apply --button;
-  }
 
-  .btn.warning {
-    background: var(--warningColor);
-  }
 
   @custom-selector :--checkeable .checkbox-label, .radio-label;
   @custom-selector :--hightlight :hover, :active;
@@ -56,297 +53,13 @@ body {
     background: red;
     color: white;
   }
-  /*home layout*/
-  .home {
-    background: var(--lightColor);
-    display: grid;
-    height: calc(var(--viewportHeight)*2);
-    grid-template-columns: 400px 1fr;
-    grid-template-rows: 1fr 150px;
-    grid-template-areas: "sidebar primary"
-                         "sidebar featuring";
-    @media (--small){
-        height: auto;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto 150px;
-        grid-template-areas: "primary"
-                             "sidebar"
-                             "featuring";
 
-    }
-  }
-
-  .home-sidebar {
-    grid-area: sidebar;
-  }
-  .home-primary {
-    grid-area: primary;
-  }
-  .home-featuring {
-    grid-area: featuring;
-  }
-
-  /*Sidebar*/
-  .sidebar {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr 1fr;
-    background: var(--darkColor);
-    color: white;
-    padding: 1em;
-    box-sizing: border-box;
-    height: 100vh;
-    overflow: auto;
-    /*background: color-mod(black alpha(50%) contrast(100%));*/
-    /*background: hwb(hue, whitness, blackness, (optional) alpha/opaciadad)*/
-    /*background: hwb(0-360, 0 - 100%, 0 - 100%, 0 - 100%)*/
-    /*background: hwb(230, 8%, 82%, 1);*/
-    /*background:gray(100); esra no sirve xd*/
-  }
-
-  /*Logo*/
-  .logo {
-    width: calc(100% - 100px);
-    margin: 0 auto;
-    background: blue;
-    height: 40px;
-    /*background-image: image-set(url() densidad, url() densidad);*/
-    background-image: image-set(url('../../src/images/platzi-video.png') 1x, url('../../src/images/platzi-video-2x.png') 2x, url('../../src/images/platzi-video-3x.png') 300dpi);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .logo-image {
-    margin: 0;
-  }
-  .logo-image img {
-    max-width: 100%;
-  }
-
-  .sidebarPlaylist {
-    overflow: auto;
-  }
-
-  /*myPlaylist*/
-
-  .myPlaylist {
-    padding: 0 20px;
-  }
-
-  .myPlaylist :any-link:hover {
-    transform: scale(1.1);
-    color: color-mod(peru l(80%) s(50%));
-  }
-
-  .myPlaylist-item{
-
-    & a{
-      color:red;
-      text-decoration: none;
-      font-size: .8em;
-      display: block;
-      margin-bottom: 7px;
-      &:hover{
-        text-decoration: underline;
-      }
-    }
-    &:last-child a{
-      margin-bottom: 0;
-    }
-    @nest .myPlaylist & {
-      border: 5px dashed pink;
-    }
-  }
-
-
-  .myPlaylist-item:matches(:last-child, :nth-of-type(3), :first-child){
-    background: color-mod(red l(80%));
-  }
-
-  .myPlaylist-item:not(:last-child, :nth-of-type(3), :first-child){
-    background: color-mod(blue l(80%));
-  }
-  /*playlistFriends*/
-
-  .playlistFriends {
-    padding: 0;
-  }
-
-  .playlistFriends-item {
-    color: white;
-  }
-
-  .playlistFriends-item {
-    display: flex;
-    margin-bottom: 7px;
-    font-size: .8em;
-  }
-  .playlistFriends-item a {
-    display: inline-flex;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-  }
-  .playlistFriends-item:hover a {
-    text-decoration: underline;
-  }
-
-  .playlistFriends-item img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-
-  .playlistFriends-item span {
-    display: inline-block;
-  }
-
-
-  .home-primary {
-    display: grid;
-    grid-template-areas: "search user"
-                         "list list";
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 300px 1fr;
-    padding: 10px;
-    overflow: auto;
-  }
-
-
-  .search {
-    grid-area: search;
-  }
-
-  .search input {
-    background: #f0f0f0;
-    font-family: "Lato";
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 16px;
-    width: 100%;
-    border: none;
-    box-shadow: 0 0 10px #f0f0f0;
-    box-sizing: border-box;;
-  }
-
-  .primary-user {
-    justify-self: end;
-  }
-
-  .user p {
-    display: flex;
-    align-items: center;
-    font-weight: 300;
-    margin: 0;
-  }
-  .user img {
-    width: 45px;
-    height: 45px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-
-  .primary-list {
-    grid-area: list;
-    overflow: auto;
-  }
-  .primaryPlaylist-topic {
-    margin: 15px 0 0;
-    color: #888B8E;
-    font-size: 14px;
-    font-weight: 300;
-  }
-  .primaryPlaylist-title {
-    margin: 0 0 15px;
-    color: #3F546C;
-    font-size: 20px;
-    font-weight: 400;
-  }
-  .primaryPlaylist-list {
-    display: flex;
-    overflow: auto;
-  }
-
-  .primaryPlaylist-list .primaryPlaylistItem {
-    margin-right: 10px;
-  }
-
-  .primaryPlaylistItem {
-    /*border: 1px solid blue;*/
-  }
-
-  .primaryPlaylistItem-image {
-  }
-
-  .primaryPlaylistItem img {
-    width: 250px;
-    height: 180px;
-    object-fit: cover;
-  }
-  .primaryPlaylistItem-title {
-    margin: 5px 0;
-    color: #44546B;
-    font-size: 14px;
-    font-weight: normal;
-  }
-
-
-  .featuring {
-    background: linear-gradient(to right, #ff0000, #ff458b);
-    display: flex;
-    height: 100%;
-    align-items: center;
-    padding-left: 100px;
-    color: white;
-    @media (--small){
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right:0;
-      height: 150px;
-    }
-  }
-
-  .featuring-image {
-    margin-right: 20px;
-  }
-
-  .featuring-title {
-    margin: 10px;
-  }
-  .featuring-album {
-    font-size: 1.3em;
-    margin: 10px;
-  }
-
-  /*@custom-media --small screen and (max-width: 768px);*/
+/*@custom-media --small screen and (max-width: 768px);*/
   @custom-media --extra-small screen and (width < 480px);
   @custom-media --small screen and (width < 768px);
   @custom-media --medium screen and (width >= 768px);
   @custom-media --large screen and (width >= 1024px);
 
-  @media (--small){
-    /*body{
-      border: 10px solid blue;
-    }
-    .home{
-      height: auto;
-      grid-template-columns: 1fr;
-      grid-template-rows: auto auto 150px;
-      grid-template-areas: "primary"
-                           "sidebar"
-                           "featuring";
-    }
-    .featuring{
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right:0;
-      height: 150px;
-    }*/
-  }
 
   @media (--extra-small){
 
